--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,18 +39,9 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@v4.1.1
-      with:
-        images: concosminx/qr-service
-
     - name: Build and push Docker image
       uses: docker/build-push-action@v3.2.0
       with:
         context: .
         push: true
-        tags: latest
-#        tags: ${{ steps.meta.outputs.tags }}
-#        labels: ${{ steps.meta.outputs.labels }}
+        tags: concosminx/qr-service:latest
