--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.5'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'com.github.ben-manes.versions' version '0.52.0'
+	id 'org.owasp.dependencycheck' version '12.1.1'
 }
 
 group = 'com.nimsoc'
@@ -25,6 +26,13 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+//dependencyCheck {
+//  nvd {
+//    apiKey = '11111-11111'
+//    delay = 4000
+//  }
+//}
 
 tasks.named('test') {
 	useJUnitPlatform()
